2013-08-19  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* configure.ac (SPHDE_SO_VERSION): Export 0:1:0 to correspond to
	package version 0.0.1 for use by libtool.
	(AC_PREREQ): Update to version 2.63 since automake 1.10 requires at
	least autoconf version 2.62.
	* src/Makefile.am (libsphde_la_LDFLAGS): add -version-info
	$(SPHDE_SO_VERSION) to mark library version properly.

2013-08-19  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* doc/sphmaindox.h: Updated documentation.
	* examples/example_sph_2_1.c: Clarified comment.
	* examples/example_sph_2_2.c: Likewise.
	* src/sassimpleheap.h: Corrected doyxgen comment syntax.
	* src/sphcontext.h: Likewise and updated comments.

2013-03-25  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphgtod.c: include stdint.h.
	(sphget_gtod_conv_factor): New API.
	(sphtb2gtod_withfactor): New API.
	(sphgtod): Use sphtb2gtod_withfactor.
	* src/sphgtod.h (sphgtod): Update comment, include @param's.
	(sphget_gtod_conv_factor): New API.
	(sphtb2gtod_withfactor): New API.
	* src/tests/sphgtod_t.c (main): Add test case for
	sphget_gtod_conv_factor and sphtb2gtod_withfactor.

2013-03-25  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphgtod.c (sphget_tb2gtod_factor): Correct rounding of
	timebase.
	(__SASDebugPrint__): fix debug printf.
	* src/sphtimer.h: Correct CLOCK_MONOTONIC to time computation.
	* src/tests/sphsinglepcqueue_tt.c: Fix compile warnings.
	* src/tests/sphsinglepcqueue_ttt.c: Likewise.

2013-03-22  Steven Munroe  <sjmunroe@us.ibm.com>

	* src/sphgtod.c: Add documentation, fix Intel issues and optimize the
	POWER implementation.
	* src/sphgtod.h: Likewise.
	* src/sphtimer.c: Likewise.
	* src/sphtimer.h: Likewise.
	* doc/libsphde-doxygen-sph.doxy: Add src/sphgtod.h.
	* src/tests/sphgtod_t.c: Increase ALLOWABLE_DRIFT value.

2013-03-01  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>

	* src/sphgtod.c: Remove unnecessary line breaks '\' from inline asm.

2013-03-01  Ryan S. Arnold  <rsa@linux.vnet.ibm.com>
